Fixed sidebar overflow bug + Fixed print media query

--- a/css/chat-dark.scss
+++ b/css/chat-dark.scss
@@ -916,6 +916,9 @@ main {
 }
 
 @media print {
+  #sidebar {
+    display: none;
+  }
   #chat {
     position: fixed;
     top: 0;
